Fix misalignment issue for checkbox hover shadow

--- a/src/app/pages/crag/crag-routes/crag-routes.component.scss
+++ b/src/app/pages/crag/crag-routes/crag-routes.component.scss
@@ -16,6 +16,13 @@
       display: none;
     }
   }
+
+  .mat-checkbox ::ng-deep {
+    .mat-checkbox-ripple {
+      height: 39px;
+      width: 39px;
+    }
+  }
 }
 
 .route-details-container {
